--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@metamask/jazzicon": "^2.0.0",
     "@openzeppelin/contracts": "^4.4.1",
     "@popperjs/core": "^2.10.2",
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
