--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.9.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "web-vitals": "^1.0.1"
