--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ 
+{
   "homepage": "https://${Ultra-tech-code}.github.io/${fastDomain-Dapp}",
   "name": "fast-domain-dapp",
   "version": "0.1.0",
@@ -33,10 +33,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "compile": "npx hardhat compile",
-    "deploy": "npx hardhat run --network alfajores scripts/deploy.js",
+    "deploy-hardhat": "npx hardhat run --network alfajores scripts/deploy.js",
     "test-contract": "npx hardhat test",
     "predeploy": "npm run build",
-    "deploy-page": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
