updated json file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://${Ultra-tech-code}.github.io/${fastDomain-Dapp}",
+  "homepage": "https://Ultra-tech-code.github.io/fastDomain-Dapp",
   "name": "fast-domain-dapp",
   "version": "0.1.0",
   "private": true,
